--- a/public/css/default.css
+++ b/public/css/default.css
@@ -8,9 +8,44 @@ body {
 }
 
 #header {
-    font-size: 40pt;
+    font-size: 20pt;
     background: #D1F7FF;
     padding: 10pt;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 25pt;
+    width: 100%;
+}
+
+#main-page {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    top: 45pt;
+    -webkit-transition: all 0.3s ease-in-out;
+       -moz-transition: all 0.3s ease-in-out;
+}
+
+#story-page {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    left: -100%;
+    top: 45pt;
+    -webkit-transition: all 0.3s ease-in-out;
+       -moz-transition: all 0.3s ease-in-out;
+}
+
+body.moveRight #main-page {
+    -webkit-transform: translate3d(100%, 0, 0);
+       -moz-transform: translate(100%, 0);
+}
+
+body.moveRight #story-page {
+    -webkit-transform: translate3d(100%, 0, 0);
+       -moz-transform: translate(100%, 0);
 }
 
 #main-content {
@@ -28,8 +63,8 @@ body {
     float: right;
 }
 
-#side-content > div {
-    margin: 10px;
+#items {
+    padding: 10pt;
 }
 
 .story-headline {
