--- a/public/css/default.css
+++ b/public/css/default.css
@@ -91,6 +91,7 @@ body.moveRight #story-page {
 
 .story-headline {
     font-size: 20pt;
+    font-family: "ff-meta-serif-web-pro-1","ff-meta-serif-web-pro-2",serif;
 }
 
 a {
