--- a/public/css/default.css
+++ b/public/css/default.css
@@ -53,6 +53,7 @@ body.moveRight #story-page {
 #main-content {
     float: left;
     width: 80%;
+    height: 100%;  /* TODO: this is temporary until we have a lot of content */
     border-right: 1px solid #BB9;
     -webkit-box-shadow: #D0D0C5 2px 2px 6px;
 }
