--- a/public/css/default.css
+++ b/public/css/default.css
@@ -16,7 +16,7 @@ h1 a:hover:after {
     padding-left: 4px;
     color: #999;
     font-size: 10pt;
-    content: "← go back home";
+    content: "↩ go back home";
 }
 
 h1 {
