--- a/public/css/default.css
+++ b/public/css/default.css
@@ -171,6 +171,11 @@ body.moveRight #story-page {
 .story-readmore {
     display: block;
     text-decoration: none;
+    color: #999;
+    font-size: 10pt;
+}
+.story-readmore:hover {
+    color: #267FD9;
 }
 
 .homepage-story-container {
